--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 5px;
+    background-color: black;
 }
 
 button {
@@ -21,6 +22,41 @@ body {
     margin: 0;
 }
 
-.display-row {
-    align-self: end;
+.display {
+    color: white;
+    font-weight: bold;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    height: 15px;
+    width: 190px;
+}
+
+#add-btn,
+#subtract-btn,
+#multiply-btn,
+#divide-btn {
+    background-color: coral;
+}
+
+#equal-btn {
+    background-color: lime;
+}
+
+#clear-btn {
+    background-color: red;
+}
+
+button {
+    background-color: gray;
+    font-weight: bold;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    border-radius: 5px;
+}
+
+.container,
+.display {
+    outline-width: 1px;
+    outline-style: solid;
+    outline-color: white;
+    padding: 10px;
+    border-radius: 5px;
 }
